Closed Bug 885632 Opened 12 years ago Closed 12 years ago

SkiaGL fails clip winding test

Categories

(Core :: Graphics: Canvas2D, defect)

ARM
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: snorp, Assigned: snorp)

References

Details

Attachments

(1 file)

We do not currently pass test_2d.canvas.clip.winding.html. Seems important.
Not entirely sure why, but SkiaGL clipping only works correctly if we have antialiasing enabled. The attached patch ensures we also do that when using the GL backend. The current behavior is maintained for the software one.
Comment on attachment 766030 [details] [diff] [review] Always use soft clipping with SkiaGL Review of attachment 766030 [details] [diff] [review]: ----------------------------------------------------------------- For the record, the initial decision to not do soft clipping on android was based off Jeff's suggestion here: https://bugzilla.mozilla.org/show_bug.cgi?id=716415#c7 I don't think anyone every measured the performance impact of this.
Attachment #766030 - Flags: review?(matt.woodrow) → review+
Assignee: nobody → snorp
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Blocks: 915145
No longer blocks: 915145
Depends on: 915145
For the record, switching off soft clipping on Android broke FFOS / E.me homescreen.
(It didn't break it -- it just caused it to render without antialiasing. That's considered broken from a UX perpsective, but not from code. The ANDROID define is defined by both B2G and Fx Android, because B2G is ANDROID... but the original reasons for disabling it here seem to apply equally to both, esp. if it's performance.)
Well if we break anti aliasing or component alpha on desktop, I am pretty sure we would consider that a regression, no? :) Anyway, we have a patch up in the other bug to remove the code. I didn't find any clear data on clipping being slow with soft clipping on mobile, and Chrome doesn't disable this, so we should be en par performance wise, at worst.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: