Bug 885632 - Always use soft clipping with SkiaGL r=mattwoodrow